--- a/v10/manifest.tmpl
+++ b/v10/manifest.tmpl
@@ -4,3 +4,13 @@ manifests:
     platform:
       architecture: amd64
       os: linux
+  - image: owncloudci/nodejs:10-arm64v8
+    platform:
+      architecture: arm64
+      variant: v8
+      os: linux
+  - image: owncloudci/nodejs:10-arm32v7
+    platform:
+      architecture: arm32
+      variant: v7
+      os: linux
