--- a/v10/manifest.tmpl
+++ b/v10/manifest.tmpl
@@ -11,6 +11,6 @@ manifests:
       os: linux
   - image: owncloudci/nodejs:10-arm32v7
     platform:
-      architecture: arm32
+      architecture: arm
       variant: v7
       os: linux
